--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -24,8 +24,8 @@
     "title": "Passion pour la course",
     "subtitle": "Notre histoire",
     "paragraph1": "Fondée par des passionnés de sport automobile, notre équipe a évolué de pilotes du week-end à une organisation professionnelle de course avec des divisions de course réelles et virtuelles.",
-    "paragraph2": "Avec une équipe dédiée de pilotes expérimentés, d'ingénieurs et de stratèges, nous offrons des expériences de trackday extraordinaires et des équipes de simracing compétitives qui repoussent les limites du possible.",
-    "cta": "DÉCOUVREZ NOS SERVICES",
+    "paragraph2": "Avec une équipe dédiée de pilotes expérimentés, d'ingénieurs, de stratèges et de coachs, nous offrons des expériences de trackday extraordinaires et des équipes de simracing compétitives qui repoussent les limites du possible.",
+    "cta": "Découvrez nos services",
     "stats": {
       "trackdays": {
         "label": "Événements Trackday"
@@ -44,6 +44,7 @@
   },
   "teams": {
     "title": "Nos équipes",
+    "subtitle": "",
     "description": "Auriga Racing est actif dans de multiples disciplines, des événements réels de la Fun Cup aux compétitions de Sim racing",
     "track": {
       "title": "Fun Cup",
@@ -67,7 +68,8 @@
     }
   },
   "gallery": {
-    "title": "GALERIE",
+    "title": "Gallerie",
+    "subtitle": "",
     "description": "Moments capturés de nos aventures de course, à la fois sur piste et dans le monde virtuel",
     "viewFullGallery": "Voir la galerie complète",
     "images": {
@@ -143,95 +145,18 @@
   },
   "events": {
     "title": "Trackdays à venir",
-    "subtitle": "On track",
+    "subtitle": "Sur circuit",
     "description": "Rejoignez-nous lors de nos prochains trackdays où Auriga Racing participera.",
     "fullCalendar": "Calendrier complet des trackdays",
-    "types": {
-      "trackday": "Trackday",
-      "simracing": "Simracing"
+    "track": "Circuit de {track}",
+    "event": {
+      "title": "Trackday à {track}"
     },
-    "items": [
-      {
-        "id": 1,
-        "event": "Trackday à Spa-Francorchamps",
-        "date": "26 mars 2025",
-        "time": "9h30 - 18h00",
-        "location": "Circuit de Spa-Francorchamps, Belgique",
-        "type": "trackday",
-        "track": "spa-francorchamps",
-        "country": "belgium"
-      },
-      {
-        "id": 2,
-        "event": "Trackday à Spa-Francorchamps",
-        "date": "27 mars 2025",
-        "time": "9h30 - 18h00",
-        "location": "Circuit de Spa-Francorchamps, Belgique",
-        "type": "trackday",
-        "track": "spa-francorchamps",
-        "country": "belgium"
-      },
-      {
-        "id": 3,
-        "event": "Trackday à Mettet",
-        "date": "29 avril 2025",
-        "time": "9h00 - 18h00",
-        "location": "Circuit de Mettet, Belgique",
-        "type": "trackday",
-        "track": "mettet",
-        "country": "belgium"
-      },
-      {
-        "id": 4,
-        "event": "Trackday à Clastres",
-        "date": "27 juin 2025",
-        "time": "9h00 - 18h00",
-        "location": "Circuit de Clastres, France",
-        "type": "trackday",
-        "track": "clastres",
-        "country": "france"
-      },
-      {
-        "id": 5,
-        "event": "Trackday à Magny-Court",
-        "date": "20 août 2025",
-        "time": "9h30 - 18h00",
-        "location": "Circuit de Magny-Court, France",
-        "type": "trackday",
-        "track": "magny-court",
-        "country": "france"     
-      },
-      {
-        "id": 6,
-        "event": "Trackday à Clastres",
-        "date": "28 août 2025",
-        "time": "9h00 - 18h00",
-        "location": "Circuit de Clastres, France",
-        "type": "trackday",
-        "track": "clastres",
-        "country": "france"
-      },
-      {
-        "id": 7,
-        "event": "Trackday à Clastres",
-        "date": "18 septembre 2025",
-        "time": "9h00 - 18h00",
-        "location": "Circuit de Clastres, France",
-        "type": "trackday",
-        "track": "clastres",
-        "country": "france"
-      },
-      {
-        "id": 8,
-        "event": "Trackday à Zandvoort",
-        "date": "17 octobre 2025",
-        "time": "9h30 - 18h00",
-        "location": "Circuit de Zandvoort, Pays-Bas",
-        "type": "trackday",
-        "track": "zandvoort",
-        "country": "netherlands"
-      }
-    ]
+    "countries": {
+      "belgium": "Belgique",
+      "france": "France",
+      "netherlands": "Pays-Bas"
+    }
   },
   "footer": {
     "tagline": "Repousser les limites sur piste et en ligne.",
