--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -154,8 +154,24 @@
     "fullCalendar": "Full Racing Calendar",
     "track": "Circuit of {track}",
     "event": {
-      "title": "Trackday at {track}"
+      "title": "Trackday at {track}",
+      "description": "Join us for a trackday at {track} on {date}",
+      "detailedDescription": "Join us for an exciting trackday at {track} in {country}. Experience the thrill of racing on this amazing circuit with Auriga Racing.",
+      "whatToExpect": "During this event, you will have the opportunity to improve your driving skills, receive coaching from experienced drivers, and enjoy a full day of track time in a safe and controlled environment.",
+      "requirements": "Participants must have a valid driver's license and their own vehicle in good condition. Safety equipment will be checked before the event. Please arrive at least 30 minutes before the start time for registration and briefing."
     },
+    "backToEvents": "Back to events",
+    "date": "Date",
+    "time": "Time",
+    "location": "Location",
+    "eventType": "Event Type",
+    "participants": "Participants",
+    "maxParticipants": "Maximum {count} participants",
+    "trackLength": "Track Length",
+    "kilometers": "{length} km",
+    "registerForEvent": "Register for this event",
+    "eventDetails": "Event Details",
+    "relatedEvents": "Other events at this track",
     "countries": {
       "belgium": "Belgium",
       "france": "France",
