--- a/src/i18n/messages/nl.json
+++ b/src/i18n/messages/nl.json
@@ -148,10 +148,35 @@
     }
   },
   "events": {
-    "title": "Komende evenementen",
-    "subtitle": "Wat komt er aan",
-    "description": "Doe mee aan deze komende trackdays en simracing-evenementen waar Auriga Racing zal deelnemen",
+    "title": "Aankomende evenementen",
+    "subtitle": "Op het circuit",
+    "description": "Doe mee aan deze aankomende trackdays en simracing-evenementen waar Auriga Racing aan zal deelnemen",
     "fullCalendar": "Volledige racekalender",
+    "track": "Circuit van {track}",
+    "event": {
+      "title": "Trackday op {track}",
+      "description": "Doe mee aan een trackday op {track} op {date}",
+      "detailedDescription": "Doe mee aan een spannende trackday op {track} in {country}. Ervaar de sensatie van racen op dit geweldige circuit met Auriga Racing.",
+      "whatToExpect": "Tijdens dit evenement krijg je de kans om je rijvaardigheden te verbeteren, coaching te ontvangen van ervaren coureurs en te genieten van een volledige dag circuittijd in een veilige en gecontroleerde omgeving.",
+      "requirements": "Deelnemers moeten een geldig rijbewijs hebben en een eigen voertuig in goede staat. Veiligheidsuitrusting wordt voor het evenement gecontroleerd. Kom minstens 30 minuten voor de starttijd aan voor registratie en briefing."
+    },
+    "backToEvents": "Terug naar evenementen",
+    "date": "Datum",
+    "time": "Tijd",
+    "location": "Locatie",
+    "eventType": "Type evenement",
+    "participants": "Deelnemers",
+    "maxParticipants": "Maximaal {count} deelnemers",
+    "trackLength": "Circuitlengte",
+    "kilometers": "{length} km",
+    "registerForEvent": "Registreren voor dit evenement",
+    "eventDetails": "Evenementdetails",
+    "relatedEvents": "Andere evenementen op dit circuit",
+    "countries": {
+      "belgium": "België",
+      "france": "Frankrijk",
+      "netherlands": "Nederland"
+    },
     "types": {
       "track": "Circuit",
       "sim": "SimRacing"
