--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -158,7 +158,8 @@
       "description": "Join us for a trackday at {track} on {date}",
       "detailedDescription": "Join us for an exciting trackday at {track} in {country}. Experience the thrill of racing on this amazing circuit with Auriga Racing.",
       "whatToExpect": "During this event, you will have the opportunity to improve your driving skills, receive coaching from experienced drivers, and enjoy a full day of track time in a safe and controlled environment.",
-      "requirements": "Participants must have a valid driver's license and their own vehicle in good condition. Safety equipment will be checked before the event. Please arrive at least 30 minutes before the start time for registration and briefing."
+      "requirements": "Participants must have a valid driver's license and their own vehicle in good condition. Safety equipment will be checked before the event. Please arrive at least 30 minutes before the start time for registration and briefing.",
+      "soldOut": "Sold Out"
     },
     "backToEvents": "Back to events",
     "date": "Date",
@@ -170,6 +171,7 @@
     "trackLength": "Track Length",
     "kilometers": "{length} km",
     "registerForEvent": "Register for this event",
+    "joinWaitingList": "Join Waiting List",
     "eventDetails": "Event Details",
     "relatedEvents": "Other events at this track",
     "countries": {
