--- a/src/i18n/messages/nl.json
+++ b/src/i18n/messages/nl.json
@@ -158,7 +158,9 @@
       "description": "Doe mee aan een trackday op {track} op {date}",
       "detailedDescription": "Doe mee aan een spannende trackday op {track} in {country}. Ervaar de sensatie van racen op dit geweldige circuit met Auriga Racing.",
       "whatToExpect": "Tijdens dit evenement krijg je de kans om je rijvaardigheden te verbeteren, coaching te ontvangen van ervaren coureurs en te genieten van een volledige dag circuittijd in een veilige en gecontroleerde omgeving.",
-      "requirements": "Deelnemers moeten een geldig rijbewijs hebben en een eigen voertuig in goede staat. Veiligheidsuitrusting wordt voor het evenement gecontroleerd. Kom minstens 30 minuten voor de starttijd aan voor registratie en briefing."
+      "requirements": "Deelnemers moeten een geldig rijbewijs hebben en een eigen voertuig in goede staat. Veiligheidsuitrusting wordt voor het evenement gecontroleerd. Kom minstens 30 minuten voor de starttijd aan voor registratie en briefing.",
+      "soldOut": "Uitverkocht",
+      "booked": "Geboekt"
     },
     "backToEvents": "Terug naar evenementen",
     "date": "Datum",
