Enhance related events logic to show upcoming non-sold-out events from all tracks

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -175,7 +175,7 @@
     "registerForEvent": "Register for this event",
     "joinWaitingList": "Join Waiting List",
     "eventDetails": "Event Details",
-    "relatedEvents": "Other events at this track",
+    "relatedEvents": "Other events",
     "countries": {
       "belgium": "Belgium",
       "france": "France",
