--- a/src/i18n/messages/nl.json
+++ b/src/i18n/messages/nl.json
@@ -174,7 +174,7 @@
     "kilometers": "{length} km",
     "registerForEvent": "Registreren voor dit evenement",
     "eventDetails": "Evenementdetails",
-    "relatedEvents": "Andere evenementen op dit circuit",
+    "relatedEvents": "Andere evenementen",
     "countries": {
       "belgium": "België",
       "france": "Frankrijk",
