--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -304,6 +304,8 @@
     "quickLinks": {
       "title": "Liens rapides",
       "home": "Accueil",
+      "trackdays": "Trackdays",
+      "about": "À propos",
       "teams": "Nos équipes",
       "results": "Résultats",
       "gallery": "Galerie",
