--- a/src/i18n/messages/nl.json
+++ b/src/i18n/messages/nl.json
@@ -270,6 +270,8 @@
     "quickLinks": {
       "title": "Snelle links",
       "home": "Home",
+      "trackdays": "Trackdays",
+      "about": "Over ons",
       "teams": "Onze teams",
       "results": "Resultaten",
       "gallery": "Galerij",
