--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -5,7 +5,7 @@
   },
   "navbar": {
     "links": {
-      "events": "Events",
+      "events": "Trackdays",
       "about": "About",
       "teams": "Teams",
       "gallery": "Gallery"
