--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -78,7 +78,14 @@
       "image3": "Finales de compétition SimRacing",
       "image4": "Arrêt aux stands pendant une course d'endurance",
       "image5": "Célébration de l'équipe après une place sur le podium",
-      "image6": "Session d'entraînement SimRacing"
+      "image6": "Session d'entraînement SimRacing",
+      "image7": "Course sous conditions de pluie",
+      "image8": "Course de nuit à Spa-Francorchamps",
+      "image9": "Briefing d'équipe avant les qualifications",
+      "image10": "Ajustements de configuration dans le garage",
+      "image11": "Célébration sur le podium après la victoire",
+      "image12": "Compétition d'équipe SimRacing",
+      "image13": "Photo d'équipe à la finale de saison"
     },
     "aria": {
       "prevSlide": "Diapositive précédente",
