--- a/src/i18n/messages/nl.json
+++ b/src/i18n/messages/nl.json
@@ -82,7 +82,14 @@
       "image3": "SimRacing competitie finales",
       "image4": "Pitstop tijdens endurance race",
       "image5": "Teamviering na podiumplaats",
-      "image6": "SimRacing trainingssessie"
+      "image6": "SimRacing trainingssessie",
+      "image7": "Racen in natte omstandigheden",
+      "image8": "Nachtrace op Spa-Francorchamps",
+      "image9": "Teambriefing voor kwalificatie",
+      "image10": "Auto-instellingen aanpassen in de garage",
+      "image11": "Podiumviering na overwinning",
+      "image12": "SimRacing teamcompetitie",
+      "image13": "Teamfoto bij seizoensfinale"
     },
     "aria": {
       "prevSlide": "Vorige slide",
