Refactor gallery slider to show 3 images per slide and update image captions

--- a/src/i18n/messages/nl.json
+++ b/src/i18n/messages/nl.json
@@ -77,19 +77,19 @@
     "description": "Momenten vastgelegd van onze race-avonturen, zowel op het circuit als in de virtuele wereld",
     "viewFullGallery": "Bekijk volledige galerij",
     "images": {
-      "image1": "FUNCUP Race op Silverstone",
-      "image2": "Teamvoorbereiding voor racedag",
-      "image3": "SimRacing competitie finales",
-      "image4": "Pitstop tijdens endurance race",
-      "image5": "Teamviering na podiumplaats",
-      "image6": "SimRacing trainingssessie",
-      "image7": "Racen in natte omstandigheden",
-      "image8": "Nachtrace op Spa-Francorchamps",
-      "image9": "Teambriefing voor kwalificatie",
-      "image10": "Auto-instellingen aanpassen in de garage",
-      "image11": "Podiumviering na overwinning",
-      "image12": "SimRacing teamcompetitie",
-      "image13": "Teamfoto bij seizoensfinale"
+      "image1": "De Fun Cup warmt op",
+      "image2": "Klaar om te gaan",
+      "image3": "Laatste controles voor de trackday begint",
+      "image4": "De coach is klaar om te vertrekken",
+      "image5": "De rijder van de dag staat klaar om het circuit op te gaan",
+      "image6": "Onze #333 in actie",
+      "image7": "Je kunt niet missen waar we zijn",
+      "image8": "De box",
+      "image9": "Vriendelijke ruimte",
+      "image10": "Catering voor onze rijders van de dag",
+      "image11": "Tijd om van rijder te wisselen",
+      "image12": "Onze #333 tijdens de pauze",
+      "image13": "Teamfoto aan het einde van de dag"
     },
     "aria": {
       "prevSlide": "Vorige slide",
