--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -164,7 +164,9 @@
       "whatToExpect": "Pendant cet événement, vous aurez l'opportunité d'améliorer vos compétences de conduite, de recevoir des conseils de pilotes expérimentés et de profiter d'une journée complète sur circuit dans un environnement sûr et contrôlé.",
       "requirements": "Les participants doivent avoir un permis de conduire valide et leur propre véhicule en bon état. L'équipement de sécurité sera vérifié avant l'événement. Veuillez arriver au moins 30 minutes avant l'heure de début pour l'inscription et le briefing.",
       "soldOut": "Complet",
-      "booked": "Réservé"
+      "booked": "Réservé",
+      "sessionPrice": "{price}€ / {session}",
+      "braceletPrice": "{price}€ / bracelet pilote à la journée"
     },
     "backToEvents": "Retour aux événements",
     "date": "Date",
