Refactor events page metadata and improve hero section responsiveness

--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -15,7 +15,7 @@
   "hero": {
     "title": "Repousser les limites",
     "subtitle": "Sur piste et en ligne",
-    "description": "Vivez le frisson du sport automobile avec nos initiations au sport automobile sur circuit et pourquoi ne pas rejoindre notre équipe Simracing ?",
+    "description": "Vivez le frisson du sport automobile avec nos initiations sur circuit et rejoignez notre équipe de Simracing pour prolongez l'expérience à la maison.",
     "cta": "Nos trackdays",
     "pitlane": "Pitlane",
     "simracingTeam": "Équipe Simracing"
